--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-
     <div class="contenedor">
         <p>¿Me perdonas?</p>
+        <!-- Video Player -->
+        <video id="videoPlayer" width="200" height="140" autoplay>
+            <source id="videoSource" src="imgs/Gato1.mp4" type="video/mp4">
+        </video>
+
         <button id="yesBtn">Si</button>
         <button id="noBtn">No</button>
-        
     </div>
     <script src="index.js"></script>
-
 </body>
 </html>
