--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <div class="contenedor">
         <p>¿Me perdonas?</p>
         <!-- Video Player -->
-        <video id="videoPlayer" width="200" height="140" autoplay>
-            <source id="videoSource" src="imgs/Gato1.mp4" type="video/mp4">
+        <video id="videoPlayer" width="200" height="140" autoplay loop>
+            <source id="videoSource" src="imgs/Gato2.mp4" type="video/mp4">
+            Tu navegador no soporta videos.
         </video>
 
         <button id="yesBtn">Si</button>
