--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="contenedor">
         <p>¿Me perdonas?</p>
         <!-- Video Player -->
-        <video id="videoPlayer" width="200" height="140" autoplay loop>
+        <video id="videoPlayer" width="200" height="140" autoplay loop controls> 
             <source id="videoSource" src="imgs/Gato2.mp4" type="video/mp4">
             Tu navegador no soporta videos.
         </video>
