--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <div class="contenedor">
         <p>¿Me perdonas?</p>
         <!-- Video Player -->
-        <video id="videoPlayer" width="200" height="140" autoplay loop controls> 
-            <source id="videoSource" src="imgs/Gato2.mp4" type="video/mp4">
-            Tu navegador no soporta videos.
+        <video id="videoPlayer" width="200" height="140" autoplay controls>
+            <source id="videoSource" src="imgs/Gato1.mp4" type="video/mp4">
         </video>
 
         <button id="yesBtn">Si</button>
